@@ -10,7 +10,8 @@
  - = Features that has been removed
 
 1.9 beta 6 (2011-06-??)
- + New atlas format: Geocaching Live offline maps
+ + New atlas format: Geocaching Live offline maps (Experimental)
+ + New atlas format: MBTiles (Experimental)
 
 1.9 beta 5 (2011-05-17)
  + Added possibility Change directory syntax for file and zip based map sources 
